html/tests/html-list-fail.rs
use yew_html::html;

fn main() {
    html! {
        <><>
    };

    html! {
        </></>
    };

    html! {
        <><></>
    };

    html! {
        <></>
        <></>
    };
}
